--- a/css/style.css
+++ b/css/style.css
@@ -22,12 +22,6 @@
   font-weight: 'normal';
   font-style: 'normal';
 }
-@font-face {
-  font-family: 'Monaco';
-  src: url("https://cdn.jsdelivr.net/gh/xaoxuu/cdn-fonts/Monaco/Monaco.ttf");
-  font-weight: 'normal';
-  font-style: 'normal';
-}
 * {
   box-sizing: border-box;
   outline: none;
@@ -47,8 +41,8 @@ html {
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 html >::-webkit-scrollbar {
-  height: 8px;
-  width: 8px;
+  height: 4px;
+  width: 4px;
 }
 html >::-webkit-scrollbar-track-piece {
   background: transparent;
@@ -56,10 +50,10 @@ html >::-webkit-scrollbar-track-piece {
 html >::-webkit-scrollbar-thumb {
   background: #2196f3;
   cursor: pointer;
-  border-radius: 1px;
+  border-radius: 2px;
 }
 html >::-webkit-scrollbar-thumb:hover {
-  background: #767676;
+  background: #ff5722;
 }
 body {
   background-color: #f4f4f4;
@@ -1184,7 +1178,7 @@ div.tabs .tab-content .tab-pane.active {
   display: block;
   background: #f6f6f6;
   font-size: 0.8125rem;
-  font-family: 'Monaco', Menlo, Monaco, courier, monospace, "Lucida Console", 'Source Code Pro', "Microsoft YaHei", Helvetica, Arial, sans-serif, 'Ubuntu';
+  font-family: Menlo, Monaco, courier, monospace, "Lucida Console", 'Source Code Pro', "Microsoft YaHei", Helvetica, Arial, sans-serif, 'Ubuntu';
   border-radius: 4px;
   border: 1px solid #e7e7e7;
   transition: all 0.28s ease;
@@ -1518,7 +1512,7 @@ div.tabs .tab-content .tab-pane.active {
   -webkit-user-select: none;
   user-select: none;
   -webkit-appearance: none;
-  font-family: Menlo, 'Monaco', Menlo, Monaco, courier, monospace, "Lucida Console", 'Source Code Pro', "Microsoft YaHei", Helvetica, Arial, sans-serif, 'Ubuntu';
+  font-family: Menlo, Menlo, Monaco, courier, monospace, "Lucida Console", 'Source Code Pro', "Microsoft YaHei", Helvetica, Arial, sans-serif, 'Ubuntu';
   font-size: calc(0.8125rem - 1px);
   font-weight: bold;
   padding: 4px 8px;
@@ -2065,7 +2059,7 @@ div.fancybox.stretch>p img {
   overflow: auto;
 }
 .article p.has-jax {
-  font-family: 'Monaco', Menlo, Monaco, courier, monospace, "Lucida Console", 'Source Code Pro', "Microsoft YaHei", Helvetica, Arial, sans-serif, 'Ubuntu';
+  font-family: Menlo, Monaco, courier, monospace, "Lucida Console", 'Source Code Pro', "Microsoft YaHei", Helvetica, Arial, sans-serif, 'Ubuntu';
   background: rgba(255,255,255,0);
   padding: 16px 8px;
   border-radius: 4px;
@@ -2170,7 +2164,7 @@ div.fancybox.stretch>p img {
   overflow: auto;
   background: #f6f6f6;
   font-size: 0.8125rem;
-  font-family: 'Monaco', Menlo, Monaco, courier, monospace, "Lucida Console", 'Source Code Pro', "Microsoft YaHei", Helvetica, Arial, sans-serif, 'Ubuntu';
+  font-family: Menlo, Monaco, courier, monospace, "Lucida Console", 'Source Code Pro', "Microsoft YaHei", Helvetica, Arial, sans-serif, 'Ubuntu';
   border: 1px solid #e7e7e7;
   padding: 16px;
   border-radius: 4px;
@@ -2188,7 +2182,7 @@ div.fancybox.stretch>p img {
   color: rgba(68,68,68,0.9);
 }
 .article code {
-  font-family: 'Monaco', Menlo, Monaco, courier, monospace, "Lucida Console", 'Source Code Pro', "Microsoft YaHei", Helvetica, Arial, sans-serif, 'Ubuntu';
+  font-family: Menlo, Monaco, courier, monospace, "Lucida Console", 'Source Code Pro', "Microsoft YaHei", Helvetica, Arial, sans-serif, 'Ubuntu';
   padding: 4px 2px 2px 2px;
   margin: 0;
   vertical-align: middle;
@@ -2836,7 +2830,8 @@ footer .copyright p {
 }
 .l_main .post-list {
   position: relative;
-  margin: 16px auto;
+  /* margin: 16px auto; */
+  margin: 60px auto !important;
   column-gap: 16px;
 }
 .l_main .post-list.multiple-columns {
@@ -2916,7 +2911,7 @@ footer .copyright p {
 }
 .l_main .post {
   position: relative;
-  margin: 16px auto;
+  margin: 60px auto;
   padding: 24px;
   border-radius: 8px;
 }
@@ -4131,6 +4126,7 @@ ul.list-v >li>a.active {
   position: relative;
   display: flex;
   flex-direction: column;
+  margin-top: 60px !important;
 }
 @media screen and (max-width: 768px) {
   .l_side {
